--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -3,36 +3,11 @@
       xmlns:th="http://www.thymeleaf.org">
 <th:block th:include="~{_shared/head}"/>
 
-
 <body>
-<header>
-    <header>
-        <nav class="navbar bg-dark navbar-expand-lg navbar-background bg-dark ">
-            <a class="navbar-brand text-white h4" href="/home">Heroes</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
-                <ul class="navbar-nav row">
-                    <li class="nav-item mr-2">
-                        <a class="nav-link text-white active h5" href="/heroes/create">Create hero</a>
-                    </li>
-
-                    <li class="nav-item mr-2">
-                        <a class="nav-link text-white active h5" href="/items/create">Create Item</a>
-                    </li>
-                    <li class="nav-item mr-2">
-                        <a class="nav-link text-white active h5" href="/logout">Logout</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-</header>
+<th:block th:include="~{_shared/header}"/>
 <main>
     <div class="text-center mb-3">
-        <h4 class="text-white mt-2">Welcome to the arena, Predator</h4>
+        <h4 class="text-white mt-2">Welcome to the arena, [[${session.user.username}]]</h4>
     </div>
     <hr class="my-3"/>
     <div class="container">
